# dnse-mt5-connector

./: .gitignore  README.md  README_TRIAL_VN30F1M.md  RELEASE_NOTES_v0.1.0-trial.md  build.ps1  build_bridge.ps1  build_installer.ps1  build_one_click.bat  deploy_mt5.bat  deploy_mt5.ps1  go.mod  go.sum  install_trial.ps1  installer_bootstrap.cs  open_setup.bat  package_trial.ps1  publish_release.ps1  push_git.ps1  release_one_click.bat  release_one_click.ps1  run_bridge_console.bat  scratch_dnse.go  start_trial.bat  stop_trial.bat  test_signals.bat
cmd/: main.go
config/: config.json  config.yaml.example
cpp/: CMakeLists.txt  DNSEBridge.cpp
docs/: DNSE_API_AUTH.md
internal/api/: dnse_client.go  handler.go  price_data_ui.go  setup_ui.go  ui.go
internal/config/: config.go
internal/dnsemodel/: models.go
internal/entrade/: client.go
internal/gmailotp/: service.go  service_test.go
internal/logger/: logger.go
internal/marketdata/: engine.go  history.go  history_test.go  normalize.go  publisher.go  registry.go  status.go  tick.go  websocket.go
internal/risk/: risk.go
internal/service/: models.go  order_service.go  position_service.go  selftest.go  signal_service.go  symbol_catalog_service.go  trading_routes.go
internal/setup/: setup.go
internal/storage/: models.go  sqlite.go
internal/telemetry/: telemetry.go
mql5/: DNSE_MarketData_Bridge.mq5  DNSE_SuperTrend_Bot.mq5
test_sdk/: clockcheck.py  common.py  compare.py  hmac_compare.py  test.py
